[Source](https://github.com/Iunius118/ToLaserBlade-Fabric).

## [Unreleased]
### Added
- Laser blade sound events:
  `tolaserblade:item.laser_blade.hit`, `tolaserblade:item.laser_blade_fp.hit`, and `tolaserblade:item.laser_trap.activate`.

### Changed
- Require Fabric Loader 0.16.10 and Fabric API 0.116.0+1.21.4.

## [7.0.0]
- Require Minecraft 1.21.4.
- Require Fabric Loader 0.16.9 and Fabric API 0.112.2+1.21.4.
- Require Cloth Config 17.0.144.

### Added
- Add special model type `tolaserblade:laser_blade` to render laser blade items.
- Add tint source type `tolaserblade:laser_blade` to tint laser blade part items.

### Changed
- Port to 1.21.4.

### Removed
- Remove `laserBlades` from configuration file.

## [6.0.0]
- Require Minecraft 1.21.3.
- Require Fabric Loader 0.16.7 and Fabric API 0.106.1+1.21.3.
- Require Cloth Config 16.0.141.

### Changed
- Port to 1.21.3.

## [5.0.3]
### Fixed
- Support LambDynamicLights 3.

## [5.0.2]
### Fixed
- Fix laser trap so that Fire Aspect can ignite mobs.

## [5.0.1]
### Fixed
- Fix enchantment upgrade sometimes causing crash.

## [5.0.0]
- Require Minecraft 1.21.
- Require Fabric Loader 0.15.11 and Fabric API 0.100.3+1.21.
- Require Cloth Config 15.0.127.

### Changed
- Port to 1.21.

## [4.1.2]
### Fixed
- Laser blades are no longer damaged when they hurt mobs.

## [4.1.1]
### Fixed
- Laser blades are no longer damaged by mining.

## [4.1.0]
### Changed
- Switch license to MIT.

## [4.0.0]
- CAUTION: Item data migration is only possible from 3.1.2 or older versions, not from 4.0.0-alpha versions.
- Require Minecraft 1.20.6.
- Require Fabric Loader 0.15.10+ and Fabric API 0.98.0+1.20.6.
- Require Cloth Config 14.0.126+.

### Added
- Data component types: `tolaserblade:lb_atk`, `tolaserblade:lb_spd`, and `tolaserblade:lb_mdl`.
- Entity type tag `tolaserblade:sensitive_to_light_element` for Light Element enchantment.

### Changed
- Port to 1.20.6.

### Removed
- Additional shader for laser blade.