@@ -1,4 +1,5 @@
 // 1.21.4	-999999999-01-01T00:00:00	ToLaserBlade/Tags for minecraft:item
+adb83dde69cf9dffe80a91ed8690a014e1d4f086 data/minecraft/tags/item/swords.json
 c3c22d0a388c9472e44188492769c812e98868c5 data/tolaserblade/tags/item/casing_repair.json
 cb32695d9050a0e7475de9452193e31ffe7a1271 data/tolaserblade/tags/item/enchantable/light_element.json
 2291131634915cea137d268d5ce2a1b908c5e6ae data/tolaserblade/tags/item/upgrade/attack.json
