@@ -1,0 +1,6 @@
+{
+  "values": [
+    "tolaserblade:laser_blade",
+    "tolaserblade:laser_blade_fp"
+  ]
+}
