@@ -6,6 +6,7 @@ import net.fabricmc.fabric.api.datagen.v1.FabricDataOutput;
 import net.fabricmc.fabric.api.datagen.v1.provider.FabricTagProvider;
 import net.fabricmc.fabric.api.tag.convention.v2.ConventionalItemTags;
 import net.minecraft.core.HolderLookup;
+import net.minecraft.tags.ItemTags;
 import net.minecraft.world.item.Items;
 
 import java.util.concurrent.CompletableFuture;
@@ -17,6 +18,8 @@ public class TLBItemTagsProvider extends FabricTagProvider.ItemTagProvider {
 
     @Override
     protected void addTags(HolderLookup.Provider arg) {
+        getOrCreateTagBuilder(ItemTags.SWORDS).add(ModItems.LASER_BLADE, ModItems.LASER_BLADE_FP);
+
         getOrCreateTagBuilder(ModItemTags.ATTACK_SPEED_UPGRADE).forceAddTag(ConventionalItemTags.GOLD_INGOTS);
         getOrCreateTagBuilder(ModItemTags.EFFICIENCY_UPGRADE).forceAddTag(ConventionalItemTags.STORAGE_BLOCKS_REDSTONE);
         getOrCreateTagBuilder(ModItemTags.EFFICIENCY_REMOVER).forceAddTag(ConventionalItemTags.REDSTONE_DUSTS);
